--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,27 @@
 asgiref==3.8.1
-Django==5.1.6
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+cryptography==44.0.2
+Django==5.1.7
+django-allauth==65.6.0
+django-paypal==2.1
 gunicorn==23.0.0
+idna==3.10
+jwt==1.3.1
+load-dotenv==0.1.0
 packaging==24.2
 pillow==11.1.0
-psycopg2-binary==2.9.10
-python-dotenv==1.0.1
+psycopg==3.2.6
+psycopg-binary==3.2.6
+psycopg-pool==3.2.6
+psycopg2==2.9.10
+pycparser==2.22
+python-dotenv==1.1.0
+pytz==2025.2
+requests==2.32.3
 sqlparse==0.5.3
-typing_extensions==4.12.2
+typing_extensions==4.13.0
+tzdata==2025.2
+urllib3==2.3.0
 whitenoise==6.9.0
